Adding Diagnostics information
Former-commit-id: ad967358c7de34dbb5776f9ba1f2ebb2c96c7121
Former-commit-id: 960777e12b075c1bfe852be11163270e4cf679b0
Former-commit-id: ee0a178614873ae58c5749a17ef0315b3dc8b104